// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleObjectParameter 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "doc": Object {
            "description": undefined,
            "tags": Array [],
          },
          "isAsync": false,
          "isDefaultExport": false,
          "isExported": false,
          "isGenerator": false,
          "name": "test",
          "parameters": Array [
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [],
              },
              "isOptional": true,
              "isRestParameter": false,
              "name": "a",
              "type": "Parameter",
              "valueType": "string | null",
            },
            Object {
              "children": Array [
                Object {
                  "defaultValue": "'test'",
                  "doc": Object {
                    "description": "name description",
                    "tags": Array [],
                  },
                  "isOptional": true,
                  "name": "name",
                  "type": "MultipleObjectParameter",
                  "valueType": "string | null",
                },
                Object {
                  "doc": Object {
                    "description": "age description",
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "name": "age",
                  "type": "MultipleObjectParameter",
                  "valueType": "number",
                },
              ],
              "doc": Object {
                "description": "a text description",
                "tags": Array [],
              },
              "isOptional": false,
              "isRestParameter": false,
              "name": "opts",
              "type": "Parameter",
              "valueType": "object",
            },
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [],
              },
              "isOptional": false,
              "isRestParameter": false,
              "name": "b",
              "type": "Parameter",
              "valueType": "number",
            },
          ],
          "type": "FunctionDeclaration",
          "valueType": "string",
        },
        Object {
          "children": Array [
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [],
              },
              "isAsync": false,
              "isGenerator": false,
              "isStatic": false,
              "name": "test",
              "parameters": Array [
                Object {
                  "doc": Object {
                    "description": undefined,
                    "tags": Array [],
                  },
                  "isOptional": true,
                  "isRestParameter": false,
                  "name": "a",
                  "type": "Parameter",
                  "valueType": "string | null",
                },
                Object {
                  "children": Array [
                    Object {
                      "defaultValue": "'test'",
                      "doc": Object {
                        "description": "name description",
                        "tags": Array [],
                      },
                      "isOptional": true,
                      "name": "name",
                      "type": "MultipleObjectParameter",
                      "valueType": "string | null",
                    },
                    Object {
                      "doc": Object {
                        "description": "age description",
                        "tags": Array [],
                      },
                      "isOptional": false,
                      "name": "age",
                      "type": "MultipleObjectParameter",
                      "valueType": "number",
                    },
                  ],
                  "doc": Object {
                    "description": "a text description",
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "opts",
                  "type": "Parameter",
                  "valueType": "object",
                },
                Object {
                  "doc": Object {
                    "description": undefined,
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "b",
                  "type": "Parameter",
                  "valueType": "number",
                },
              ],
              "type": "MethodDeclaration",
              "valueType": "void",
            },
          ],
          "doc": undefined,
          "extends": undefined,
          "isDefaultExport": false,
          "isExported": false,
          "name": "Test",
          "type": "ClassDeclaration",
        },
      ],
      "doc": Object {
        "description": "",
        "tags": Array [],
      },
      "name": "Index",
      "type": "Module",
    },
  ],
  "type": "Root",
}
`;

exports[`basic from plain content 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "doc": Object {
            "description": undefined,
            "tags": Array [
              Object {
                "fullText": "@returns {number}",
                "name": undefined,
                "tagName": "returns",
                "text": undefined,
                "typeExpression": "number",
              },
            ],
          },
          "isAsync": false,
          "isDefaultExport": false,
          "isExported": false,
          "isGenerator": false,
          "name": "sum",
          "parameters": Array [
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [],
              },
              "isOptional": false,
              "isRestParameter": false,
              "name": "a",
              "type": "Parameter",
              "valueType": "number",
            },
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [],
              },
              "isOptional": false,
              "isRestParameter": false,
              "name": "b",
              "type": "Parameter",
              "valueType": "number",
            },
          ],
          "type": "FunctionDeclaration",
          "valueType": "number",
        },
      ],
      "doc": Object {
        "description": "",
        "tags": Array [],
      },
      "name": "Index",
      "type": "Module",
    },
  ],
  "type": "Root",
}
`;

exports[`basic from vfile 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "doc": Object {
            "description": "This is a callback example",
            "tags": Array [
              Object {
                "fullText": "@returns {Human}",
                "name": undefined,
                "tagName": "returns",
                "text": undefined,
                "typeExpression": "Human",
              },
              Object {
                "fullText": "@callback createHumanCallback
 ",
                "name": undefined,
                "tagName": "callback",
                "text": "createHumanCallback",
                "typeExpression": undefined,
              },
            ],
          },
          "isDefaultExport": false,
          "isExported": true,
          "name": "createHumanCallback",
          "parameters": Array [
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [],
              },
              "isOptional": false,
              "isRestParameter": false,
              "name": "age",
              "type": "Parameter",
              "valueType": "number",
            },
          ],
          "type": "FunctionType",
          "valueType": "Human",
        },
        Object {
          "children": Array [
            Object {
              "doc": Object {
                "description": "some a description",
                "tags": Array [],
              },
              "isReadonly": false,
              "name": "a",
              "type": "PropertySignature",
              "valueType": "string",
            },
            Object {
              "doc": undefined,
              "isReadonly": false,
              "name": "b",
              "type": "PropertySignature",
              "valueType": "number",
            },
          ],
          "doc": Object {
            "description": "This is a typedef example",
            "tags": Array [
              Object {
                "fullText": "@type {Object}",
                "name": undefined,
                "tagName": "type",
                "text": undefined,
                "typeExpression": "Object",
              },
              Object {
                "fullText": "@prop ",
                "name": undefined,
                "tagName": "prop",
                "text": "options.a some a description",
                "typeExpression": "string",
              },
              Object {
                "fullText": "@prop ",
                "name": undefined,
                "tagName": "prop",
                "text": "options.b",
                "typeExpression": "number",
              },
              Object {
                "fullText": "@typedef options",
                "name": undefined,
                "tagName": "typedef",
                "text": "options",
                "typeExpression": undefined,
              },
            ],
          },
          "isDefaultExport": false,
          "isExported": true,
          "name": "options",
          "type": "TypeLiteral",
        },
        Object {
          "children": Array [
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [
                  Object {
                    "fullText": "@constructor
     * ",
                    "name": undefined,
                    "tagName": "constructor",
                    "text": undefined,
                    "typeExpression": undefined,
                  },
                ],
              },
              "parameters": Array [
                Object {
                  "doc": Object {
                    "description": "Set a name",
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "name",
                  "type": "Parameter",
                  "valueType": "string",
                },
                Object {
                  "doc": Object {
                    "description": "Set the age",
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "age",
                  "type": "Parameter",
                  "valueType": "number",
                },
              ],
              "type": "Constructor",
              "valueType": "Human",
            },
            Object {
              "doc": undefined,
              "isReadonly": false,
              "name": "_name",
              "type": "PropertyDeclaration",
              "valueType": "string",
            },
            Object {
              "doc": undefined,
              "isReadonly": false,
              "name": "_age",
              "type": "PropertyDeclaration",
              "valueType": "number",
            },
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [
                  Object {
                    "fullText": "@private",
                    "name": undefined,
                    "tagName": "private",
                    "text": undefined,
                    "typeExpression": undefined,
                  },
                ],
              },
              "isReadonly": false,
              "name": "_aPrivateMethod",
              "type": "PropertyDeclaration",
              "valueType": undefined,
            },
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [
                  Object {
                    "fullText": "@prop ",
                    "name": undefined,
                    "tagName": "prop",
                    "text": undefined,
                    "typeExpression": "string",
                  },
                ],
              },
              "isReadonly": undefined,
              "isStatic": false,
              "name": "name",
              "type": "GetAccessor",
              "valueType": "string",
            },
            Object {
              "doc": undefined,
              "isReadonly": undefined,
              "isStatic": false,
              "name": "age",
              "type": "GetAccessor",
              "valueType": "number",
            },
            Object {
              "doc": undefined,
              "isReadonly": undefined,
              "isStatic": false,
              "name": "age",
              "type": "SetAccessor",
              "valueType": undefined,
            },
            Object {
              "doc": Object {
                "description": "Static factory constructor",
                "tags": Array [
                  Object {
                    "fullText": "@returns {Human}",
                    "name": undefined,
                    "tagName": "returns",
                    "text": undefined,
                    "typeExpression": "Human",
                  },
                ],
              },
              "isAsync": false,
              "isGenerator": false,
              "isStatic": true,
              "name": "create",
              "parameters": Array [
                Object {
                  "doc": Object {
                    "description": "Set a name",
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "name",
                  "type": "Parameter",
                  "valueType": "string",
                },
                Object {
                  "doc": Object {
                    "description": undefined,
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "age",
                  "type": "Parameter",
                  "valueType": "number",
                },
              ],
              "type": "MethodDeclaration",
              "valueType": "Human",
            },
            Object {
              "doc": undefined,
              "isAsync": false,
              "isGenerator": false,
              "isStatic": false,
              "name": "sayHello",
              "parameters": Array [],
              "type": "MethodDeclaration",
              "valueType": "string",
            },
          ],
          "doc": Object {
            "description": undefined,
            "tags": Array [
              Object {
                "fullText": "@example
 * ",
                "name": undefined,
                "tagName": "example",
                "text": "const human = new Human('pepe', 20)
console.log(human.age)",
                "typeExpression": undefined,
              },
              Object {
                "fullText": "@description ",
                "name": undefined,
                "tagName": "description",
                "text": "eso es",
                "typeExpression": undefined,
              },
            ],
          },
          "extends": undefined,
          "isDefaultExport": false,
          "isExported": true,
          "name": "Human",
          "type": "ClassDeclaration",
        },
        Object {
          "doc": Object {
            "description": "It's a human factory",
            "tags": Array [
              Object {
                "fullText": "@returns {createHumanCallback}",
                "name": undefined,
                "tagName": "returns",
                "text": "a function",
                "typeExpression": "createHumanCallback",
              },
            ],
          },
          "isAsync": false,
          "isDefaultExport": false,
          "isExported": true,
          "isGenerator": false,
          "name": "humanFactory",
          "parameters": Array [
            Object {
              "doc": Object {
                "description": "Set a name",
                "tags": Array [],
              },
              "isOptional": false,
              "isRestParameter": false,
              "name": "name",
              "type": "Parameter",
              "valueType": "string",
            },
          ],
          "type": "FunctionDeclaration",
          "valueType": "createHumanCallback",
        },
        Object {
          "doc": undefined,
          "isDefaultExport": false,
          "isExported": true,
          "kind": "const",
          "name": "CONSTANT",
          "type": "VariableDeclaration",
          "valueType": "\\"test\\"",
        },
      ],
      "doc": Object {
        "description": "
A library for building widgets.
",
        "tags": Array [
          Object {
            "fullText": "@remarks
 * ",
            "name": undefined,
            "tagName": "remarks",
            "text": "The \`widget-lib\` defines the {@link IWidget} interface and {@link Widget} class,
which are used to build widgets.",
            "typeExpression": undefined,
          },
          Object {
            "fullText": "@packageDocumentation",
            "name": undefined,
            "tagName": "packageDocumentation",
            "text": undefined,
            "typeExpression": undefined,
          },
        ],
      },
      "name": "Human",
      "type": "Module",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [
                  Object {
                    "fullText": "@constructor
     * ",
                    "name": undefined,
                    "tagName": "constructor",
                    "text": undefined,
                    "typeExpression": undefined,
                  },
                ],
              },
              "parameters": Array [
                Object {
                  "doc": Object {
                    "description": undefined,
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "name",
                  "type": "Parameter",
                  "valueType": "string",
                },
              ],
              "type": "Constructor",
              "valueType": "Power",
            },
            Object {
              "doc": undefined,
              "isReadonly": false,
              "name": "_name",
              "type": "PropertyDeclaration",
              "valueType": "string",
            },
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [
                  Object {
                    "fullText": "@prop ",
                    "name": undefined,
                    "tagName": "prop",
                    "text": undefined,
                    "typeExpression": "string",
                  },
                ],
              },
              "isReadonly": undefined,
              "isStatic": false,
              "name": "name",
              "type": "GetAccessor",
              "valueType": "string",
            },
          ],
          "doc": undefined,
          "extends": undefined,
          "isDefaultExport": false,
          "isExported": true,
          "name": "Power",
          "type": "ClassDeclaration",
        },
      ],
      "doc": Object {
        "description": "",
        "tags": Array [],
      },
      "name": "Power",
      "type": "Module",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "doc": undefined,
              "parameters": Array [
                Object {
                  "doc": Object {
                    "description": undefined,
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "name",
                  "type": "Parameter",
                  "valueType": "string",
                },
                Object {
                  "doc": Object {
                    "description": undefined,
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "age",
                  "type": "Parameter",
                  "valueType": "number",
                },
              ],
              "type": "Constructor",
              "valueType": "Mutant",
            },
            Object {
              "doc": undefined,
              "isReadonly": false,
              "name": "_power",
              "type": "PropertyDeclaration",
              "valueType": "Power",
            },
            Object {
              "doc": Object {
                "description": "Set a power",
                "tags": Array [
                  Object {
                    "fullText": "@returns {Mutan}",
                    "name": undefined,
                    "tagName": "returns",
                    "text": undefined,
                    "typeExpression": "Mutan",
                  },
                ],
              },
              "isAsync": false,
              "isGenerator": false,
              "isStatic": false,
              "name": "setPower",
              "parameters": Array [
                Object {
                  "doc": Object {
                    "description": undefined,
                    "tags": Array [],
                  },
                  "isOptional": false,
                  "isRestParameter": false,
                  "name": "power",
                  "type": "Parameter",
                  "valueType": "Power",
                },
              ],
              "type": "MethodDeclaration",
              "valueType": "any",
            },
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [
                  Object {
                    "fullText": "@returns {Power}",
                    "name": undefined,
                    "tagName": "returns",
                    "text": undefined,
                    "typeExpression": "Power",
                  },
                ],
              },
              "isAsync": false,
              "isGenerator": false,
              "isStatic": false,
              "name": "getPower",
              "parameters": Array [],
              "type": "MethodDeclaration",
              "valueType": "Power",
            },
          ],
          "doc": undefined,
          "extends": "Human",
          "isDefaultExport": false,
          "isExported": true,
          "name": "Mutant",
          "type": "ClassDeclaration",
        },
      ],
      "doc": Object {
        "description": "",
        "tags": Array [],
      },
      "name": "Mutant",
      "type": "Module",
    },
    Object {
      "children": Array [],
      "doc": Object {
        "description": "",
        "tags": Array [],
      },
      "name": "Index",
      "type": "Module",
    },
  ],
  "type": "Root",
}
`;

exports[`destructuring 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "doc": Object {
            "description": undefined,
            "tags": Array [],
          },
          "isAsync": false,
          "isDefaultExport": false,
          "isExported": false,
          "isGenerator": false,
          "name": "test",
          "parameters": Array [
            Object {
              "doc": Object {
                "description": undefined,
                "tags": Array [],
              },
              "isOptional": false,
              "isRestParameter": false,
              "name": "opts",
              "type": "Parameter",
              "valueType": "object",
            },
          ],
          "type": "FunctionDeclaration",
          "valueType": "void",
        },
      ],
      "doc": Object {
        "description": "",
        "tags": Array [],
      },
      "name": "Index",
      "type": "Module",
    },
  ],
  "type": "Root",
}
`;
